# InfraScope

./: .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/mcp/: data_provider.py  mock_data.py
backend/app/models/: schemas.py
backend/app/routers/: disaster.py
backend/app/services/: risk_scoring.py  situation_summary.py
docs/: index.html
docs/css/: style.css
docs/js/: app.js  data.js  risk.js  summary.js
frontend/static/js/: app.js
frontend/templates/: index.html
tests/: test_api.py  test_data_provider.py  test_risk_scoring.py  test_situation_summary.py
